# SQLProblemGenerator

./: .gitignore  ChatBot.py  Column.py  DataBase.py  DatabaseConnector.py  GeneratorSQL.pyproj  GeneratorSQL.sln  GeneratorSQLTest.py  MyQueryGenerator.py  QueryGenerator.py  README.md  Table.py  TableTask.py  Task.py  misc.py  pyproject.toml  requirements.txt  select.txt  words.txt
db_create/: Автомобили.txt  Библиотека.txt  Бумажная_продукция.txt  Интернет_магазин.txt  Компания.txt  Лес.txt  Морской_трафик.txt  Наушники.txt  Погода.txt  Пчелы.txt
dbs/: Book.db  Car.db  Planets.db
