[tool.poetry]
name = "generatorsqltask"
version = "0.1.0"
description = ""
authors = ["Oleg Pepeg <bakarbyikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
g4f = "0.2.2.8"
matplotlib = "3.8.2"
pandas = "2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
