[tool.poetry]
name = "generatorsqltask"
version = "0.1.0"
description = ""
authors = ["Oleg Pepeg <bakarbyikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
g4f = {extras = ["all"], version = "^0.2.3.0"}
matplotlib = "3.8.2"
pandas = "2.2.1"
brotli = "^1.1.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
